[package]
name = "custom_errors"
version = "0.1.0"
authors = ["Ignacio Piqueras <ignacio.piqueras@silicon-gears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.13"
failure = "0.1.6"
url = "2.1"

[dev-dependencies]
tempfile = "3"
